# slotchain

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  PROMPT_TEMPLATE.md  README.md
.github/copilot-instructions/: membank.instructions.md
cmake/: slotchainConfig.cmake.in
docs/: CURRENT_STATE.md  DESIGN.md  ROADMAP.md  V0_1_CHECKLIST.md
examples/: CMakeLists.txt  hybrid_pipeline.cpp  runtime_pipeline.cpp  scoped_disconnect.cpp  static_pipeline.cpp
include/slotchain/: chain.hpp  concepts.hpp  connection.hpp  connection_node.hpp  runtime_pipeline.hpp  runtime_slot.hpp  runtime_slot_impl.hpp  runtime_slot_static.hpp  scoped_connection.hpp  signal.hpp  slot.hpp  slotchain.hpp  small_fn.hpp
tests/: CMakeLists.txt  test_disconnect.cpp  test_runtime_pipeline.cpp  test_static_pipeline.cpp
